[package]
name = "pngme"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.17", features = ["derive", "cargo"] }
anyhow = { version = "1.0.62", default-features = false }
crc = "1.8.1"
